# college-projects

./: .gitignore  README.md
year-1/hospital-appointment-booking-system/: CMakeLists.txt  README.md
year-1/hospital-appointment-booking-system/docs/: requirements.md  test-plan.md
year-1/hospital-appointment-booking-system/include/: App.hpp  Models.hpp  Storage.hpp  Utils.hpp
year-1/hospital-appointment-booking-system/src/: App.cpp  Storage.cpp  Utils.cpp  main.cpp
year-1/student-course-management-system/: CMakeLists.txt  README.md
year-1/student-course-management-system/include/: App.hpp  Models.hpp  Storage.hpp  Utils.hpp
year-1/student-course-management-system/src/: App.cpp  Storage.cpp  Utils.cpp  main.cpp
year-2/pathfinding-visualizer/: CMakeLists.txt  README.md
year-2/pathfinding-visualizer/include/: Algorithms.hpp  Grid.hpp  MinHeap.hpp  Queue.hpp  Stack.hpp  Types.hpp
year-2/pathfinding-visualizer/src/: Algorithms.cpp  Grid.cpp  MinHeap.cpp  Queue.cpp  Stack.cpp  main.cpp
year-2/smart-campus-navigation-app/: README.md
year-2/university-library-management-system/: README.md
year-3/process-scheduling-simulator/: CMakeLists.txt  README.md
year-3/process-scheduling-simulator/data/: processes.txt
year-3/process-scheduling-simulator/include/: algorithms.h  models.h  parser.h  report.h
year-3/process-scheduling-simulator/src/: algorithms.c  main.c  parser.c  report.c
year-3/real-time-object-detection-tracking-system/: README.md
year-4/: README.md
year-4/house-price-prediction-regression-models/: README.md  requirements.txt
(+20 files in other folders)
